refactor(api): replace Collectors.toList with Stream.toList in exception handler